--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "d3": "^5.12.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "request": "^2.88.0"
   }
