--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "d3": "^5.12.0",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "request": "^2.88.0"
+    "dotenv": "^16.0.0",
+    "ejs": "^2.7.4",
+    "express": "^4.17.3",
+    "request": "^2.88.0",
+    "spotify-web-api-js": "^1.5.2",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
