--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "d3": "^5.12.0",
     "dotenv": "^16.0.0",
